fix horizontal scrolling

--- a/sass/hero-section.scss
+++ b/sass/hero-section.scss
@@ -614,4 +614,8 @@ $multiplier: 3;
   background: white;
   border-radius: 50%;
 }
+
+.container {
+  overflow: hidden;
+}
 /* LAYERS */
